--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -74,6 +74,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Організації\Form_Організація_ТабличнаЧастина_Контакти.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Довідники\Організації\Form_Організація_ТабличнаЧастина_Контакти.Designer.cs">
+      <DependentUpon>Form_Організація_ТабличнаЧастина_Контакти.cs</DependentUpon>
+    </Compile>
     <Compile Include="Документи\ПрихіднийКасовийОрдер\Form_ПрихіднийКасовийОрдерДокумент.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -556,6 +562,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Номенклатура\Form_НоменклатураПапкиЕлемент.resx">
       <DependentUpon>Form_НоменклатураПапкиЕлемент.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Організації\Form_Організація_ТабличнаЧастина_Контакти.resx">
+      <DependentUpon>Form_Організація_ТабличнаЧастина_Контакти.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Склади\Form_СкладиПапкиВибір.resx">
       <DependentUpon>Form_СкладиПапкиВибір.cs</DependentUpon>
