--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -173,6 +173,18 @@
     <Compile Include="Журнали\Закупки\Form_ЗакупкиЖурнал.designer.cs">
       <DependentUpon>Form_ЗакупкиЖурнал.cs</DependentUpon>
     </Compile>
+    <Compile Include="Журнали\Повний\Form_ПовнийЖурнал.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Журнали\Повний\Form_ПовнийЖурнал.designer.cs">
+      <DependentUpon>Form_ПовнийЖурнал.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Журнали\Фінанси\Form_ФінансиЖурнал.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Журнали\Фінанси\Form_ФінансиЖурнал.designer.cs">
+      <DependentUpon>Form_ФінансиЖурнал.cs</DependentUpon>
+    </Compile>
     <Compile Include="Журнали\Продажі\Form_ПродажіЖурнал.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -855,6 +867,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Журнали\Закупки\Form_ЗакупкиЖурнал.resx">
       <DependentUpon>Form_ЗакупкиЖурнал.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Журнали\Повний\Form_ПовнийЖурнал.resx">
+      <DependentUpon>Form_ПовнийЖурнал.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Журнали\Фінанси\Form_ФінансиЖурнал.resx">
+      <DependentUpon>Form_ФінансиЖурнал.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Журнали\Продажі\Form_ПродажіЖурнал.resx">
       <DependentUpon>Form_ПродажіЖурнал.cs</DependentUpon>
